mdapipkg/objects/Lead.object
<CustomObject>
    <fields>
        <fullName>Deprecated_LeadCompanyEmployeeSize__c</fullName>
        <formula>IF(ISBLANK(NumberOfEmployees), &quot;Others&quot;,
IF((NumberOfEmployees) &lt; 50, &quot;Number of Employees 49 or Less&quot;,
IF((NumberOfEmployees) &gt;= 50 &amp;&amp; (NumberOfEmployees)  &lt; 100, &quot;Number of Employees 50 - 99&quot;,
IF((NumberOfEmployees) &gt;= 100 &amp;&amp; (NumberOfEmployees)  &lt; 250, &quot;Number of Employees 100 - 249&quot;,
IF((NumberOfEmployees) &gt;= 250 &amp;&amp; (NumberOfEmployees)  &lt; 499, &quot;Number of Employees 250 - 499&quot;,
IF((NumberOfEmployees) &gt;= 500 &amp;&amp; (NumberOfEmployees)  &lt; 999, &quot;Number of Employees 500 - 999&quot;,
IF((NumberOfEmployees) &gt;= 1000 &amp;&amp; (NumberOfEmployees)  &lt; 2499, &quot;Number of Employees 1000 - 2499&quot;,
IF((NumberOfEmployees) &gt;= 2500 &amp;&amp; (NumberOfEmployees)  &lt; 5000, &quot;Number of Employees 2500 - 4999&quot;,
IF((NumberOfEmployees) &gt;= 5000 &amp;&amp; (NumberOfEmployees)  &lt; 25000, &quot;Number of Employees 5000 - 24999&quot;,
IF((NumberOfEmployees) &gt;= 25000, &quot;Number of Employees 25000+&quot;, &quot;Others&quot;))))))))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Deprecated_LeadCompanyEmployeeSize</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Deprecated_LeadTotalEmployeeCompensation__c</fullName>
        <formula>IF(ISBLANK(Tot_Empl_Comp__c), &quot;Others&quot;, 
IF((Tot_Empl_Comp__c) &lt;= 2000000, &quot;Total Employee Compensation $2,000,000 or Less&quot;, 
IF((Tot_Empl_Comp__c) &gt; 2000000 &amp;&amp; (Tot_Empl_Comp__c) &lt;= 5000000, &quot;Total Employee Compensation $2,000,001 - $5,000,000&quot;, 
IF((Tot_Empl_Comp__c) &gt; 5000000 &amp;&amp; (Tot_Empl_Comp__c) &lt;= 10000000, &quot;Total Employee Compensation $5,000,001 - $10,000,000&quot;, 
IF((Tot_Empl_Comp__c) &gt; 10000000 &amp;&amp; (Tot_Empl_Comp__c) &lt;= 25000000, &quot;Total Employee Compensation $10,000,001 - $25,000,000&quot;, 
IF((Tot_Empl_Comp__c) &gt; 25000000 &amp;&amp; (Tot_Empl_Comp__c) &lt;= 50000000, &quot;Total Employee Compensation $25,000,001 - $50,000,000&quot;,
IF((Tot_Empl_Comp__c) &gt; 50000000 &amp;&amp; (Tot_Empl_Comp__c) &lt;= 10000000, &quot;Total Employee Compensation $50,000,001 - $100,000,000&quot;, 
IF((Tot_Empl_Comp__c) &gt; 10000000 &amp;&amp; (Tot_Empl_Comp__c) &lt;= 500000000, &quot;Total Employee Compensation $100,000,001 - $500,000,000&quot;,
IF((Tot_Empl_Comp__c) &gt; 500000000, &quot;Total Employee Compensation $500,000,000+&quot;, &quot;Others&quot;)))))))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Deprecated_LeadTotalEmployeeCompensation</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Deprecated_LeadVenSinglePayment__c</fullName>
        <defaultValue>&quot;Single Payment&quot;</defaultValue>
        <description>For mapping</description>
        <label>Deprecated_LeadVenSinglePayment</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Deprecated_QC_Street1__c</fullName>
        <formula>Street</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Deprecated_QC_Street1</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Deprecated_QC_Zip_Postal__c</fullName>
        <formula>PostalCode</formula>
        <label>Deprecated_QC Zip Postal</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Deprecated_School_City__c</fullName>
        <label>Deprecated_School City</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Deprecated_School_Name__c</fullName>
        <label>Deprecated_School Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Deprecated_School_State__c</fullName>
        <label>Deprecated_School State</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Deprecated_School_Type__c</fullName>
        <label>Deprecated_School Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>High School</fullName>
                </value>
                <value>
                    <fullName>Preparatory</fullName>
                </value>
                <value>
                    <fullName>University/College</fullName>
                </value>
                <value>
                    <fullName>Graduate School</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Deprecated_Title_Opp__c</fullName>
        <description>For mapping to Opportunity</description>
        <label>Deprecated_Title (Opp)</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Deprecated_Which_Chapter__c</fullName>
        <label>Deprecated_Which Chapter?</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ent_Val__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Enterprise Value</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Enterprise_Type__c</fullName>
        <label>Enterprise Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Independent third party investment/valuation</fullName>
                </value>
                <value>
                    <fullName>Net Worth or assets before depreciation</fullName>
                </value>
                <value>
                    <fullName>Sum of public equity plus debt less cash</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Field_of_Study__c</fullName>
        <label>Field of Study</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FirmAddress__c</fullName>
        <formula>FirmStreet__c  &amp; &apos;,&apos; &amp;   BR()  &amp;  FirmCity__c &amp; &apos;,&apos; &amp; FirmState__c &amp; &apos;,&apos; &amp;  BR()  &amp;  FirmZip__c</formula>
        <label>Firm Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FirmCity__c</fullName>
        <label>Firm City</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FirmState__c</fullName>
        <label>Firm State</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FirmStreet__c</fullName>
        <label>Firm Street</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FirmWebsite__c</fullName>
        <label>Firm Website</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>FirmZip__c</fullName>
        <label>Firm Zip</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Firm_Phone__c</fullName>
        <label>Firm Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Firm_Type__c</fullName>
        <label>Firm Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Public</fullName>
                </value>
                <value>
                    <fullName>Private for Profit</fullName>
                </value>
                <value>
                    <fullName>Private Non-Profit Company</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Fiscal_Year_End__c</fullName>
        <formula>IF(MONTH(DATEVALUE(CreatedDate)) &lt;=6, DATE(YEAR(DATEVALUE(CreatedDate)),6,30),
IF(MONTH(DATEVALUE(CreatedDate)) &gt;=7, DATE(YEAR(DATEVALUE(CreatedDate))+1,6,30),
NULL)
)</formula>
        <label>Fiscal Year End</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Fiscal_Year_Start__c</fullName>
        <description>This field indicates when the start of the fiscal year is for this lead.</description>
        <formula>IF(MONTH((TODAY())) &lt;=6,DATE((YEAR(TODAY()-1)),7,1), 
IF(MONTH(TODAY()) &gt;=7, DATE(YEAR(TODAY()),7,1), 
NULL) 
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Fiscal Year Start</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Full_Operational_Authority__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Do you have full operational responsibility for this division?</inlineHelpText>
        <label>Full Operational Authority?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>GUID__c</fullName>
        <externalId>true</externalId>
        <label>GUID</label>
        <length>50</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Gender__c</fullName>
        <label>Gender</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Male</fullName>
                </value>
                <value>
                    <fullName>Female</fullName>
                </value>
                <value>
                    <fullName>Prefer not to disclose</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Google_Map_of_Address__c</fullName>
        <formula>HYPERLINK(&quot;https://maps.google.com/maps?q=&quot; &amp; Street &amp; &apos;,+&apos; &amp; City &amp; &apos;,+&apos; &amp; State &amp; &apos;,+&apos; &amp; Country,&quot;Click to Plot on Maps&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Google Map of Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Graduation_Year__c</fullName>
        <label>Graduation Year</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Has_3rd_Party__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Does not have outside 3rd Party</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Head_of_Division__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>I am the head of a division of the qualifying company?</inlineHelpText>
        <label>Head of Division?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HomePhone__c</fullName>
        <label>Home Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Home_Fax_Country_Code__c</fullName>
        <label>Home Fax Country Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Home_Phone_Country_Code__c</fullName>
        <label>Home Phone Country Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Home_Phone_Extension__c</fullName>
        <label>Home Phone Extension</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Is_Additional_qualifying_companies__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Is this lead seeking to qualifying with more than one company.</inlineHelpText>
        <label>Additional qualifying companies?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Subsidiary__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Subsidiary</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Suitable_for_Another_Chapter__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Suitable for Another Chapter?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>KGRenewal__VenueOpportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Venue Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Leads</relationshipLabel>
        <relationshipName>Leads</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LastActivityDate_Boolean_Flag__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is used as Boolean flag which is used in flow</description>
        <label>LastActivityDate Boolean Flag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Last_Contact_Date__c</fullName>
        <label>Last Contact Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Lead_Health__c</fullName>
        <label>Lead Health</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Red</fullName>
                </value>
                <value>
                    <fullName>Yellow</fullName>
                </value>
                <value>
                    <fullName>Green</fullName>
                    <default>true</default>
                    <label>Green</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Lead_Opportunity_Name_Migrated__c</fullName>
        <formula>FirstName&amp; &quot; &quot; &amp; LastName &amp;&quot; - &quot;&amp; TEXT(Fiscal_Year_End__c )</formula>
        <label>Lead Opportunity Name (Migrated)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead_Opportunity_Name_Opp__c</fullName>
        <label>Lead Opportunity Name (Opp)</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead_Opportunity_Name__c</fullName>
        <formula>LEFT(FirstName&amp; &quot; &quot; &amp; LastName &amp;&quot;-&quot;&amp; 
IF(MONTH(Fiscal_Year_Start__c)&lt;10, &quot;0&quot;&amp; TEXT (MONTH(Fiscal_Year_Start__c)), TEXT(MONTH(Fiscal_Year_Start__c))) +&quot;/&quot; + 
IF(DAY(Fiscal_Year_Start__c)&lt;10, &quot;0&quot;&amp; TEXT(DAY(Fiscal_Year_Start__c)), TEXT(DAY(Fiscal_Year_Start__c))) +&quot;/&quot; +TEXT(YEAR(Fiscal_Year_Start__c))&amp;&quot;-YPO&quot;,100)</formula>
        <label>Lead Opportunity Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead_Rejection_Date__c</fullName>
        <label>Lead Rejection Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Lead_Rejection_Reason_Comments__c</fullName>
        <label>Lead Rejection Reason Comments</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Lead_Rejection_Reason__c</fullName>
        <label>Lead Rejection Reason</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Does not meet local chapter quantitative criteria</fullName>
                </value>
                <value>
                    <fullName>Does not live within chapter geographic vicinity</fullName>
                </value>
                <value>
                    <fullName>Does not fit chapter’s culture (language barrier, etc)</fullName>
                </value>
                <value>
                    <fullName>Does not meet chapter diversity goals  (industry saturation, etc)</fullName>
                </value>
                <value>
                    <fullName>Does not meet YPO quantitative criteria; chapter WILL pursue a waiver</fullName>
                </value>
                <value>
                    <fullName>Does not meet YPO quantitative criteria; chapter WILL NOT pursue a waiver</fullName>
                </value>
                <value>
                    <fullName>Conflict of interest/commitment from prospect</fullName>
                </value>
                <value>
                    <fullName>Does not suit YPO profile</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Lead_Source_Other__c</fullName>
        <label>Lead Source Other</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MTM_Submit_for_3rd_Party_Verification__c</fullName>
        <formula>IF( 
OR( 
TEXT (Status) = &quot;New&quot;, 
TEXT (Status) = &quot;Unverified&quot;, 
TEXT (Status) = &quot;Initial Qualifying&quot;, 
TEXT (Status) = &quot;Awaiting Chapter Approval&quot;, 
TEXT (Status) = &quot;Ready to Convert&quot; 
), 
HYPERLINK(&apos;/apex/ThirdPartyVerificationFlowVF?varLeadId=&apos;&amp;Id,&quot;Submit for 3rd Party Verification&quot;,&quot;_self&quot;), null)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>MTM Submit for 3rd Party Verification</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mobile_Phone_Country_Code__c</fullName>
        <label>Mobile Phone Country Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Notify_Prospect_Assigned_to_Chapter_Sent__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Notify Prospect-Assigned to Chapter Sent</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Number_of_Employees_Opp__c</fullName>
        <description>Duplicate to map to opportunity on conversion</description>
        <label>Number of Employees (Opp)</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Officer_Comments__c</fullName>
        <inlineHelpText>The Chapter Officer referring the prospect enters comments here.</inlineHelpText>
        <label>Referring Member Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Only_Person_to_Hold_Title__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Am I the only person within the qualifying company that holds the title listed above?</inlineHelpText>
        <label>Only Person to Hold Title?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Operationally_equivalent_to_company__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Is the division operationally equivalent to a company or subsidiary?</inlineHelpText>
        <label>Operationally equivalent to company?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Opportunity_Billing_Address__c</fullName>
        <description>For DocuSign</description>
        <label>Opportunity Billing Address</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Opportunity_Record_Type_Name__c</fullName>
        <defaultValue>$Label.Opportunity_Record_Type_Name</defaultValue>
        <description>This converts to Prospect record type</description>
        <label>Opportunity Record Type Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Organization__c</fullName>
        <label>Organization</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OtherPhone__c</fullName>
        <label>Other Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Other_Phone_Country_Code__c</fullName>
        <label>Other Phone Country Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Other_Phone_Extension__c</fullName>
        <label>Other Phone Extension</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Owner_ID__c</fullName>
        <formula>CASESAFEID(OwnerId)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Owner ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Parent_Company__c</fullName>
        <label>Parent Company</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Passport_or_Driver_s_License__c</fullName>
        <inlineHelpText>File must be 1 MB or smaller.  For files up to 25 MB attach at the bottom of the screen under notes and attachments.</inlineHelpText>
        <label>Passport or Drivers License</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Phone_Country_Code__c</fullName>
        <label>Phone Country Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phone_Extension__c</fullName>
        <label>Phone Extension</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phone_Type__c</fullName>
        <label>Phone Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Business Phone</fullName>
                </value>
                <value>
                    <fullName>Home Phone</fullName>
                </value>
                <value>
                    <fullName>Mobile Phone</fullName>
                </value>
                <value>
                    <fullName>Business</fullName>
                    <isActive>false</isActive>
                    <label>Business</label>
                </value>
                <value>
                    <fullName>Home</fullName>
                    <isActive>false</isActive>
                    <label>Home</label>
                </value>
                <value>
                    <fullName>Mobile</fullName>
                    <isActive>false</isActive>
                    <label>Mobile</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Possible_Duplicate_Qualifying_Company__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This is comparing this Lead&apos;s qualifying company with opportunity qualifying companies for upcoming fiscal year and current fiscal year.</description>
        <label>Possible Duplicate Qualifying Company</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Preferred_Phone__c</fullName>
        <label>Preferred Phone</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Business Phone</fullName>
                </value>
                <value>
                    <fullName>Home Phone</fullName>
                </value>
                <value>
                    <fullName>Mobile Phone</fullName>
                </value>
                <value>
                    <fullName>Other Phone</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>President_Type__c</fullName>
        <label>President Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Entrepreneur</fullName>
                </value>
                <value>
                    <fullName>Professional Manager</fullName>
                </value>
                <value>
                    <fullName>Family Business Operator</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Prior_Value__c</fullName>
        <label>Prior Value Activity Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Pursue_Status__c</fullName>
        <label>Pursue Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Pending</fullName>
                </value>
                <value>
                    <fullName>Chapter Considering</fullName>
                </value>
                <value>
                    <fullName>Will Pursue</fullName>
                </value>
                <value>
                    <fullName>Will Not Pursue</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>QC_Annual_Assets__c</fullName>
        <label>Annual Assets</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>QC_Annual_Fees__c</fullName>
        <label>Annual Fees</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>QC_Annual_Revenue__c</fullName>
        <label>Annual Revenue</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>QC_City__c</fullName>
        <formula>City</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>QC City</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QC_Country__c</fullName>
        <formula>Country</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>QC Country</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QC_Enterprise_Value__c</fullName>
        <label>Enterprise Value</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>QC_Number_of_Employees_Opt_1__c</fullName>
        <label>Number of Employees (Opt 1)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>QC_Number_of_Employees_Opt_2__c</fullName>
        <label>Number of Employees (Opt 2)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>QC_Qualifying_Country__c</fullName>
        <label>Qualifying Country</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QC_State__c</fullName>
        <formula>State</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>QC State</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QC_Total_Employee_Compensation_Opt_1__c</fullName>
        <label>Total Employee Compensation (Opt 1)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>QC_Total_Employee_Compensation_Opt_2__c</fullName>
        <label>Total Employee Compensation (Opt 2)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>QualifiedORUnQualifiedLeads__c</fullName>
        <formula>IF(ISBLANK(TEXT (Status)), &quot;Others&quot;, 
IF(TEXT (Status) = &quot;New&quot;, &quot;New&quot;,
IF(TEXT (Status) = &quot;Initial Qualifying&quot; || TEXT (Status) = &quot;Initial Qualification&quot; || TEXT (Status) = &quot;Awaiting Chapter Approval&quot; || TEXT (Status) = &quot;Ready to Convert&quot; || TEXT (Status) = &quot;Closed – Converted&quot;, &quot;Qualified&quot;,
IF(TEXT (Status) = &quot;Rejected&quot; || TEXT (Status) = &quot;Closed – Unqualified&quot;, &quot;UnQualified&quot;, 
IF(TEXT (Status) = &quot;Unverified&quot;, &quot;Unverified&quot;, &quot;Qualified&quot;)))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>QualifiedORUnQualifiedLeads</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reason_for_Not_Pursuing__c</fullName>
        <label>Reason for Not Pursuing</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ref_Member__c</fullName>
        <label>Referring Member</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Referred_by_Chapter__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Target Chapter</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>(1 OR 2) AND 3 AND (4 OR 5)</booleanFilter>
            <filterItems>
                <field>Account.Type</field>
                <operation>equals</operation>
                <value>Chapter</value>
            </filterItems>
            <filterItems>
                <field>Account.Chapter_Network_Exception__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <filterItems>
                <field>Account.Type</field>
                <operation>notEqual</operation>
                <value>Region, Super-Region</value>
            </filterItems>
            <filterItems>
                <field>Account.Status__c</field>
                <operation>equals</operation>
                <value>Active</value>
            </filterItems>
            <filterItems>
                <field>Account.Status__c</field>
                <operation>equals</operation>
                <value>In Development</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Leads</relationshipLabel>
        <relationshipName>Leads</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Referring_Chapter_TEXT__c</fullName>
        <description>This field is being used for Web to Lead, since Referred by Chapter is a lookup field and is not supported in Web to Lead. An internal process will need to update the actual Referred by Chapter field based on the information input into this field.</description>
        <label>Referring Chapter</label>
        <length>120</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <label>Region</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Africa</fullName>
                </value>
                <value>
                    <fullName>Australia/New Zealand</fullName>
                </value>
                <value>
                    <fullName>Canada</fullName>
                </value>
                <value>
                    <fullName>Central US</fullName>
                </value>
                <value>
                    <fullName>East Central US</fullName>
                </value>
                <value>
                    <fullName>Europe</fullName>
                </value>
                <value>
                    <fullName>International</fullName>
                </value>
                <value>
                    <fullName>Latin America</fullName>
                </value>
                <value>
                    <fullName>Middle East / North Africa</fullName>
                </value>
                <value>
                    <fullName>North Asia</fullName>
                </value>
                <value>
                    <fullName>Northeastern US</fullName>
                </value>
                <value>
                    <fullName>Pacific US</fullName>
                </value>
                <value>
                    <fullName>South Asia</fullName>
                </value>
                <value>
                    <fullName>Southeast Asia</fullName>
                </value>
                <value>
                    <fullName>Southeast US &amp; Caribbean</fullName>
                </value>
                <value>
                    <fullName>Southeast US and Caribbean</fullName>
                </value>
                <value>
                    <fullName>Western US</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Relationship_Status__c</fullName>
        <label>Relationship Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Single</fullName>
                </value>
                <value>
                    <fullName>In a Committed Relationship</fullName>
                </value>
                <value>
                    <fullName>Married</fullName>
                </value>
                <value>
                    <fullName>Life Partner</fullName>
                </value>
                <value>
                    <fullName>Divorced</fullName>
                </value>
                <value>
                    <fullName>Separated</fullName>
                </value>
                <value>
                    <fullName>Widowed</fullName>
                </value>
                <value>
                    <fullName>Choose Not to Say</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Request_3rd_Party_from_Prospect__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is driven by an Act-On process. If it is not functioning as expected; please, contact MARCOM</description>
        <label>Request 3rd Party from Prospect</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Responsible_for_Generating_Sales__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Is the division responsible for generating sales and revenue?</inlineHelpText>
        <label>Responsible for Generating Sales?</label>
        <type>Checkbox</type>
    </fields>
</CustomObject>